--- a/notebooks/seq2seq_tf.ipynb
+++ b/notebooks/seq2seq_tf.ipynb
@@ -6587,7 +6587,7 @@
    "source": [
     "from csv import writer\n",
     "counter=0\n",
-    "with open(os.path.join(out_path,\"reranker_test_round_1.csv\"),\"w\") as f:\n",
+    "with open(os.path.join(out_path,\"reranker_dev.csv\"),\"w\") as f:\n",
     "    if counter%100==0:\n",
     "        print(counter)\n",
     "    counter=counter+1\n",
